Removes doctests plugin. Adds scripted tests